fixed collapse on listing

--- a/src/main/resources/static/app.css
+++ b/src/main/resources/static/app.css
@@ -606,6 +606,6 @@ ul {
     top:50%!important;
 }
 .container-overlay-details {
-    padding-right: 2rem;
+    padding-left: 2rem;
 }
 
